# brixs

./: .buildinfo  .directory  .gitignore  20230126_qmaps_00.csv  LICENSE  README.md  README.rst  arraymanip.html  backpack.sh  brixs.html  doc.sh  documentation.html  dummy.html  example.py  example2.html  figmanip.html  filemanip.html  genindex.html  git_cheat  index.html  installation.html  intermanip.html  model_functions.html  objects.inv  packing.sh  py-modindex.html  pyproject.toml  pyproject_old.toml  requirements.txt  search.html  searchindex.js  setup.py  simulate.html  ssh_g.sh  test.py  test.txt
.github/workflows/: release.yaml
_autosummary/: brixs.Peaks.html  brixs.Spectrum.html  brixs.backpack.arraymanip.html  brixs.backpack.figmanip.html  brixs.backpack.filemanip.html  brixs.file_reading.ADRESS.html  brixs.file_reading.I21.html  brixs.file_reading.IPE.html
_sources/: arraymanip.rst.txt  documentation.rst.txt  index.rst.txt  modules.rst.txt
_sources/_autosummary/: brixs.backpack.arraymanip.rst.txt  brixs.file_reading.I21.rst.txt
_sources/addons/: finder.rst.txt  model.rst.txt
_sources/backpack/: figmanip.rst.txt  filemanip.rst.txt  index.rst.txt  numanip.rst.txt
_sources/brixs/: Image.rst.txt  Spectrum.rst.txt  index.rst.txt
addons/: crystal.html  finder.html  model.html
backpack/: __init__.py  arraymanip.html  arraymanip.py  figmanip.html  figmanip.py  filemanip.html  index.html  interact.html  interact.py  numanip.html  numanip.py  query.html  xlsx.py
beamlines/: ADRESS.py  I21.py  ID32.py  IPE.py  VERITAS.py  __init__.py
brixs/: Image.html  PhotonEvents.html  Spectra.html  Spectrum.html  __init__.py  arraymanip.py  brixs.py  config.py  crystal.py  dummy.py  fake_data.py  figmanip.py  file.py  file_reading.py  filemanip.py  finder.py  generate_dummy.py  index.html  intermanip.py  model - Copy.py  model.py  peak_finding.py  peaks(old).py  peaks.py  peaks_temporary.py  plotting_support.py
brixs.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
brixs/Experimental/: is_notebook.py
brixs/addons/: broaden.py  centroid.py  experimental.py  finder(safecopy).py  finder.py  fitting.py  h5.py  labels.py  pdfmanip.py  png2clipboard.py  sendemail.py  sound.py  spec.py  svg.py  svgmanip.py
brixs/backpack/: __init__.py  arraymanip.py  figmanip.py  filemanip.py  interact.py  model_functions.py  numanip.py  other.py  query.py  vectormanip.py  xlsx.py
brixs/beamlines/: ADRESS.py  I21.py  IPE.py  IPE2.py  IPEods.py  PEAXIS.py  VERITAS.py  VERITASods.py  ipe.py  scs.py
brixs/crystal/: __init__.py  crystal.py
brixs/extra/: crystal.py  labels.py
brixs/file_reading/: ADRESS.py  I21.py  IPE.py
brixs/model/: __init__.py  core.py  example.py  model(safe).py  model.py  model_functions.py  peaks.py
brixs/multiplet/: __init__.py  crispy_0_7_3_modified.py
brixs/obsolete/: peaks_works.py
brixs/sheets/: common.py  libreoffice.py  ods.py  xlsx.py
brixs/support/: crystal.py  plotting.py
doc/: interact.html  objects.inv  search.html
doc/_sources/: dummy.rst.txt  (+2 more)
docs/: arraymanip.html  brixs.html  conf.py  example1.html  fake.html  file_reading.html  filemanip.html  genindex.html  index.html  index.rst  installation.html  installation.rst  interact.html  model_functions.html  objects.inv  py-modindex.html  searchindex.js  simulate.html
docs3/: example1.rst  fake.rst
examples/: 0_hello_world.py  1_plotting.py  ADRESS_calibration.py  ADRESS_curvature_correction.py  Image.py  PhotonEvents.py  Spectra.py  Spectrum.py  Untitled.txt  documentation.rst  example.py  example_Image.py  example_Image_0.py  example_Image_1.py  example_Peaks.py  example_PhotonEvents.py  example_Spectra.py  example_Spectra0.py  example_Spectrum.py  example_Spectrum0.py  example_Spectrum1.py  example_Spectrum2.py  example_adress.py  example_peaxis.py  im.txt  peaks.p  simulate.py  test.pe  test.txt
fixtures/: Cu_0005_d1.h5
old/: brixs_v0.py
tests/: test_0.py
(+574 files in other folders)
