[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brixs"
version = "0.0.3"
description = "An object-oriented Python package for processing and analyzing RIXS and XAS experimental data, designed to be user-friendly and efficient for scientific research."
readme = "README.rst"
requires-python = ">=3.7"
license = {file = "LICENSE.txt"}
keywords = ["RIXS", "XAS", "X-ray", "Synchrotron", "beamline"]
authors = [
    {name = "Carlos William Galdino", email = "carlos.galdino@psi.ch"},
    {name = "Thiago Mori",            email = "thiago.mori@lnls.br"},
    {name = "Felipe Custodio",        email = "felipe.custodio@lnls.br"},
    {name = "Tulio Rocha",            email = "tulio.rocha@lnls.br"}]
maintainers = [
    {name = "Carlos William Galdino", email = "carlos.galdino@psi.ch"},
    {name = "Felipe Custodio",        email = "felipe.custodio@lnls.br"}]
dependencies = [
    "numpy >= 1.15", 
    "matplotlib>=3.4",
]
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent"
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]




