[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "brixs"
version = "0.1.0"
description = "An object-oriented Python package for processing and analyzing RIXS and XAS experimental data, designed to be user-friendly and efficient for scientific research."
requires-python = ">=3.10"
long-description = "See https://github.com/cwgaldino/brixs for more info."
license = {file = "LICENSE"}
keywords = ["RIXS", "XAS", "X-ray", "Synchrotron", "beamline"]
authors = [
    {name = "Carlos William Galdino", email = "carlos.galdino@psi.ch"},
    {name = "Thiago Mori",            email = "thiago.mori@lnls.br"},
    {name = "Felipe Custodio",        email = "felipe.custodio@lnls.br"},
    {name = "Tulio Rocha",            email = "tulio.rocha@lnls.br"}]
maintainers = [
    {name = "Carlos William Galdino", email = "carlos.galdino@psi.ch"},
    {name = "Felipe Custodio",        email = "felipe.custodio@lnls.br"}]
dependencies = [
    "numpy >= 1.15", 
    "matplotlib>=3.10",
]
classifiers=[
        "Programming Language :: Python :: 3",
        "License :: OSI Approved :: MIT License",
        "Operating System :: OS Independent"
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
]





